[project]
name = "comfyui-d2-size-selector"
description = "This is a custom node that allows you to easily call up and set image size presets. Settings can be made by editing the included config.yaml. It is almost identical to Comfyroll Studio's CR AspectRatio. I created it because I wanted to easily edit the presets."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/da2el-ai/ComfyUI-d2-size-selector"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-d2-size-selector"
Icon = ""
