[project]
name = "comfyui-d2-size-selector"
description = "A custom node for quick image size preset recall and setup. Edit config.yaml to configure."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/da2el-ai/ComfyUI-d2-size-selector"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "da2el"
DisplayName = "ComfyUI-d2-size-selector"
Icon = ""
